@@ -17,7 +17,6 @@ import org.springframework.context.annotation.Configuration;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Optional;
 
 @Setter
@@ -45,7 +44,7 @@ public class BitlyProperties {
         Optional<Path> optionalDir = Optional.ofNullable(getClientConfigDir());
         Optional<Path> optionalFile = Optional.ofNullable(getClientConfigFile());
         if ((optionalDir.isPresent()) && (optionalFile.isPresent())) {
-            Path jsonConfigFile = Paths.get(clientConfigDir.toString(), clientConfigFile.toString());
+            Path jsonConfigFile = Path.of(clientConfigDir.toString(), clientConfigFile.toString());
             if (Files.exists(jsonConfigFile)) {
                 ObjectMapper mapper = new ObjectMapper();
                 mapper.enable(SerializationFeature.WRAP_ROOT_VALUE);
