@@ -9,14 +9,12 @@ import java.awt.image.BufferedImage;
 import java.io.*;
 import java.net.URL;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 @Slf4j
 public class ImageScalingService {
     public Path scale(URL url) {
-        Path tempFile;
-        try {
-            tempFile = java.nio.file.Files.createTempFile(Paths.get(System.getProperty("java.io.tmpdir")), "resized", ".jpg");
+        Path tempFile = null;
+        try {tempFile = java.nio.file.Files.createTempFile(Path.of(System.getenv("TMP")), "resized", ".jpg");
             BufferedImage image = ImageIO.read(url);
             ImageIO.write(image, "jpg", tempFile.toFile());
         } catch (IOException e) {
@@ -26,41 +24,41 @@ public class ImageScalingService {
     }
 
     public Path scale(Path path) {
-        Path tempFile;
+        Path tempFile = null;
 
-        BufferedImage originalImage;
+        BufferedImage originalImage = null;
 
         BufferedInputStream bis = null;
         BufferedOutputStream bos = null;
         double scaleFactor = 1.0d;
         try {
-            tempFile = java.nio.file.Files.createTempFile(Paths.get(System.getProperty("java.io.tmpdir")), "resized-" + path.getFileName(), ".jpg");
+            tempFile = java.nio.file.Files.createTempFile(Path.of(System.getenv("TMP")), "resized-" + path.getFileName(), ".jpg");
 
             InputStream fis = new FileInputStream(path.toFile());
-            bis = new BufferedInputStream(fis, 1024 * 16);
+            bis = new BufferedInputStream(fis, 1024*16);
             originalImage = ImageIO.read(bis);
 
             ByteArrayOutputStream baos = new ByteArrayOutputStream();
-            bos = new BufferedOutputStream(baos, 1024 * 16);
+            bos = new BufferedOutputStream(baos, 1024*16);
             int iteration = 0;
             boolean iterationWasUnderSize = false;
             BufferedImage resizedImage = originalImage;
             int width = originalImage.getWidth();
             do {
                 if (iteration > 0) {
-                    scaleFactor = (iterationWasUnderSize ? 1.5 : scaleFactor - 0.001d);
-                    resizedImage = Scalr.resize(originalImage, (int) (width * scaleFactor));
+                    scaleFactor = (iterationWasUnderSize?1.5:scaleFactor - 0.001d);
+                    resizedImage = Scalr.resize(originalImage, (int)(width*scaleFactor));
                     width = resizedImage.getWidth();
                 }
                 baos = new ByteArrayOutputStream();
-                bos = new BufferedOutputStream(baos, 1024 * 16);
+                bos = new BufferedOutputStream(baos, 1024*16);
                 ImageIO.write(resizedImage, "JPG", bos);
                 int size = baos.size();
                 bos.close();
                 iterationWasUnderSize = size < 2000000L;
                 if (inRange(size) || (iterationWasUnderSize && iteration == 0)) {
                     FileOutputStream fos = new FileOutputStream(tempFile.toFile());
-                    bos = new BufferedOutputStream(fos, 1024 * 16);
+                    bos = new BufferedOutputStream(fos, 1024*16);
                     ImageIO.write(resizedImage, "JPG", bos);
                     break;
                 }
@@ -80,45 +78,45 @@ public class ImageScalingService {
     }
 
     public Path scale2(Path path) {
-        Path tempFile;
+        Path tempFile = null;
 
-        BufferedImage originalImage;
+        BufferedImage originalImage = null;
 
         BufferedInputStream bis = null;
         BufferedOutputStream bos = null;
         try {
-            tempFile = java.nio.file.Files.createTempFile(Paths.get(System.getProperty("java.io.tmpdir")), "resized-" + path.getFileName(), ".jpg");
+            tempFile = java.nio.file.Files.createTempFile(Path.of("C:\\temp"), "resized-" + path.getFileName(), ".jpg");
 
             InputStream fis = new FileInputStream(path.toFile());
-            bis = new BufferedInputStream(fis, 1024 * 16);
+            bis = new BufferedInputStream(fis, 1024*16);
             originalImage = ImageIO.read(bis);
 
             ByteArrayOutputStream baos = new ByteArrayOutputStream();
-            bos = new BufferedOutputStream(baos, 1024 * 16);
+            bos = new BufferedOutputStream(baos, 1024*16);
             int iteration = 0;
             boolean iterationWasUnderSize = false;
             BufferedImage resizedImage = originalImage;
             int width = originalImage.getWidth();
             do {
                 if (iteration > 0) {
-                    double scaleFactor = (iterationWasUnderSize ? 1.5 : 0.5);
-                    resizedImage = Scalr.resize(originalImage, (int) (width * scaleFactor));
+                    double scaleFactor = (iterationWasUnderSize?1.5:0.5);
+                    resizedImage = Scalr.resize(originalImage, (int)(width*scaleFactor));
                     width = resizedImage.getWidth();
                 }
                 baos = new ByteArrayOutputStream();
-                bos = new BufferedOutputStream(baos, 1024 * 16);
+                bos = new BufferedOutputStream(baos, 1024*16);
                 ImageIO.write(resizedImage, "JPG", bos);
                 int size = baos.size();
                 bos.close();
                 iterationWasUnderSize = size < 2000000L;
                 if (inRange(size) || (iterationWasUnderSize && iteration == 0)) {
                     FileOutputStream fos = new FileOutputStream(tempFile.toFile());
-                    bos = new BufferedOutputStream(fos, 1024 * 16);
+                    bos = new BufferedOutputStream(fos, 1024*16);
                     ImageIO.write(resizedImage, "JPG", bos);
                     break;
                 }
                 iteration++;
-                System.out.println("iteration [" + iteration + "]");
+                System.out.println("iteration ["+iteration+"]");
             } while (true);
         } catch (Exception e) {
             throw new LegoImagingException(e);
@@ -132,7 +130,6 @@ public class ImageScalingService {
         }
         return tempFile;
     }
-
     private boolean inRange(long size) {
         return (size < 2000000L);
     }
